<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegistroLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="30dp"
            android:src="@drawable/new_user"
            android:contentDescription="@null"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/coreo_registro"
            android:autofillHints="emailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rectangulo_ingrese_texto"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/nombre_usuario_registro"
            android:autofillHints="username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rectangulo_ingrese_texto"
            android:padding="18dp"
            android:inputType="text"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/contrasena_registro"
            android:autofillHints="password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rectangulo_ingrese_texto"
            android:padding="18dp"
            android:inputType="textPassword"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/confirmar_contrasena"
            android:autofillHints="password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rectangulo_ingrese_texto"
            android:padding="18dp"
            android:inputType="textPassword"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:backgroundTint="@color/white"
            android:textColor="#D35400"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/registrarse_btn"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver_registro_a_login"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:id="@+id/volver_registro_login"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>