<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicia_sesion"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_login_circulo"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resgistrate"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:id="@+id/ir_a_registro"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/ingrese_su_correo"
            android:autofillHints="emailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rectangulo_ingrese_texto"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:id="@+id/ingreso_correo_input"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/ingrese_su_contraseña"
            android:autofillHints="password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rectangulo_ingrese_texto"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/ingreso_contrasena_input"
            android:layout_gravity="center"/>
        
        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:backgroundTint="@color/white"
            android:textColor="#D35400"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/iniciar_sesion_btn"
            android:layout_gravity="center"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accede_desde_tu_cuenta"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/facebook"
                android:contentDescription="@null"/>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/google"
                android:contentDescription="@null"/>

        </LinearLayout>




    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>